# handy-utils

./: . dockerignore  .dockerignore  .gitattributes  .gitignore  AGENTS.md  Dockerfile  README.md  apn_tester.py  astrobro_updater.py  chore.py  conftest.py  direct_link.py  groq_models.py  icon_resize.py  main.py  md2epub.py  mistral_ocr.py  pypi_name_checker.py  pyproject.toml  rm_drm.py  style.css  token_counter.py  ui.py  utils.py  webp_converter.py  yt_transcriber.py
.streamlit/: config.toml
astrobro_updater/: __init__.py
direct_link/: __init__.py
list_groq_models/: __init__.py
md2epub/: __init__.py
mistral_ocr/: __init__.py
tests/: conftest.py  test_direct_link.py  test_icon_resize.py  test_md2epub.py  test_mistral_ocr.py  test_yt_transcriber.py
tests/assets/: dummy-adobekey.der
yt_transcriber/: __init__.py  caption.py  transcribe.py  utils.py
