[project]
name = "handy-utils"
version = "0.1.0"
description = "Handy Utilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mistralai",
 "pytubefix",
 "streamlit",
 "google-genai",
 "groq>=0.24.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
 "watchdog>=6.0.0",
]

[tool.ruff]
isort.no-sections = true
extend-ignore = ["E203", "E402", "E501", "E712", "F401", "F811"]
