[project]
name = "handy-utils"
version = "0.1.0"
description = "Handy Utilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mistralai",
    "pytubefix",
    "streamlit",
    "google-genai",
    "groq>=0.24.0",
    "beautifulsoup4>=4.13.4",
    "lxml>=5.4.0",
    "pypandoc>=1.15",
    "ebooklib>=0.19",
    "pycryptodome==3.21.0",
    "pyjwt>=2.10.1",
    "yt-dlp>=2025.6.9",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
    "pytest-playwright>=0.7.0",
    "watchdog>=6.0.0",
]

[tool.ruff]
isort.no-sections = true
extend-ignore = ["E203", "E402", "E501", "E712", "F401", "F811"]
